MeuCompilador/src/main/java/org/example/generated/ForcaParser.java
// Generated from C:/GitHub/Projeto_compilador/MeuCompilador/src/main/antlr/Forca.g4 by ANTLR 4.13.2
package org.example.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ForcaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, VAR=21, SE=22, SENAO=23, ENQUANTO=24, REPITA=25, 
		ATE=26, LEIA=27, ESCREVA=28, PARE=29, CONTINUE=30, TIPO_INTEIRO=31, TIPO_REAL=32, 
		TIPO_TEXTO=33, OU=34, E=35, ID=36, REAL=37, INT=38, TEXTO=39, ESPACO=40, 
		COMLIN=41, COMBLO=42;
	public static final int
		RULE_programa = 0, RULE_declaracao = 1, RULE_tipo = 2, RULE_comando = 3, 
		RULE_bloco = 4, RULE_seCmd = 5, RULE_enquantoCmd = 6, RULE_repitaCmd = 7, 
		RULE_ioCmd = 8, RULE_listaArgs = 9, RULE_atribuicao = 10, RULE_expressao = 11, 
		RULE_exprOu = 12, RULE_exprE = 13, RULE_exprIgual = 14, RULE_exprRel = 15, 
		RULE_exprAdd = 16, RULE_exprMul = 17, RULE_exprUn = 18, RULE_prim = 19, 
		RULE_literal = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracao", "tipo", "comando", "bloco", "seCmd", "enquantoCmd", 
			"repitaCmd", "ioCmd", "listaArgs", "atribuicao", "expressao", "exprOu", 
			"exprE", "exprIgual", "exprRel", "exprAdd", "exprMul", "exprUn", "prim", 
			"literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'='", "';'", "'{'", "'}'", "'('", "')'", "','", "'=='", 
			"'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'!'", "'var'", "'se'", "'senao'", "'enquanto'", "'repita'", "'ate'", 
			"'leia'", "'escreva'", "'pare'", "'continue'", "'inteiro'", "'real'", 
			"'texto'", "'ou'", "'e'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "VAR", "SE", "SENAO", 
			"ENQUANTO", "REPITA", "ATE", "LEIA", "ESCREVA", "PARE", "CONTINUE", "TIPO_INTEIRO", 
			"TIPO_REAL", "TIPO_TEXTO", "OU", "E", "ID", "REAL", "INT", "TEXTO", "ESPACO", 
			"COMLIN", "COMBLO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Forca.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ForcaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ForcaParser.EOF, 0); }
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70789365776L) != 0)) {
				{
				setState(44);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(42);
					declaracao();
					}
					break;
				case T__3:
				case SE:
				case ENQUANTO:
				case REPITA:
				case LEIA:
				case ESCREVA:
				case PARE:
				case CONTINUE:
				case ID:
					{
					setState(43);
					comando();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(ForcaParser.VAR, 0); }
		public TerminalNode ID() { return getToken(ForcaParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(VAR);
			setState(52);
			match(ID);
			setState(53);
			match(T__0);
			setState(54);
			tipo();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(55);
				match(T__1);
				setState(56);
				expressao();
				}
			}

			setState(59);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode TIPO_INTEIRO() { return getToken(ForcaParser.TIPO_INTEIRO, 0); }
		public TerminalNode TIPO_REAL() { return getToken(ForcaParser.TIPO_REAL, 0); }
		public TerminalNode TIPO_TEXTO() { return getToken(ForcaParser.TIPO_TEXTO, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15032385536L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public SeCmdContext seCmd() {
			return getRuleContext(SeCmdContext.class,0);
		}
		public EnquantoCmdContext enquantoCmd() {
			return getRuleContext(EnquantoCmdContext.class,0);
		}
		public RepitaCmdContext repitaCmd() {
			return getRuleContext(RepitaCmdContext.class,0);
		}
		public IoCmdContext ioCmd() {
			return getRuleContext(IoCmdContext.class,0);
		}
		public TerminalNode PARE() { return getToken(ForcaParser.PARE, 0); }
		public TerminalNode CONTINUE() { return getToken(ForcaParser.CONTINUE, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comando);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				atribuicao();
				setState(64);
				match(T__2);
				}
				break;
			case SE:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				seCmd();
				}
				break;
			case ENQUANTO:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				enquantoCmd();
				}
				break;
			case REPITA:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				repitaCmd();
				}
				break;
			case LEIA:
			case ESCREVA:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				ioCmd();
				setState(70);
				match(T__2);
				}
				break;
			case PARE:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				match(PARE);
				setState(73);
				match(T__2);
				}
				break;
			case CONTINUE:
				enterOuterAlt(_localctx, 7);
				{
				setState(74);
				match(CONTINUE);
				setState(75);
				match(T__2);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 8);
				{
				setState(76);
				bloco();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__3);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70787268624L) != 0)) {
				{
				{
				setState(80);
				comando();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeCmdContext extends ParserRuleContext {
		public TerminalNode SE() { return getToken(ForcaParser.SE, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public List<BlocoContext> bloco() {
			return getRuleContexts(BlocoContext.class);
		}
		public BlocoContext bloco(int i) {
			return getRuleContext(BlocoContext.class,i);
		}
		public TerminalNode SENAO() { return getToken(ForcaParser.SENAO, 0); }
		public SeCmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seCmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterSeCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitSeCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitSeCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeCmdContext seCmd() throws RecognitionException {
		SeCmdContext _localctx = new SeCmdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_seCmd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(SE);
			setState(89);
			match(T__5);
			setState(90);
			expressao();
			setState(91);
			match(T__6);
			setState(92);
			bloco();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENAO) {
				{
				setState(93);
				match(SENAO);
				setState(94);
				bloco();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnquantoCmdContext extends ParserRuleContext {
		public TerminalNode ENQUANTO() { return getToken(ForcaParser.ENQUANTO, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public EnquantoCmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enquantoCmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterEnquantoCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitEnquantoCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitEnquantoCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnquantoCmdContext enquantoCmd() throws RecognitionException {
		EnquantoCmdContext _localctx = new EnquantoCmdContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_enquantoCmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ENQUANTO);
			setState(98);
			match(T__5);
			setState(99);
			expressao();
			setState(100);
			match(T__6);
			setState(101);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RepitaCmdContext extends ParserRuleContext {
		public TerminalNode REPITA() { return getToken(ForcaParser.REPITA, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode ATE() { return getToken(ForcaParser.ATE, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public RepitaCmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repitaCmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterRepitaCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitRepitaCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitRepitaCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepitaCmdContext repitaCmd() throws RecognitionException {
		RepitaCmdContext _localctx = new RepitaCmdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_repitaCmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(REPITA);
			setState(104);
			bloco();
			setState(105);
			match(ATE);
			setState(106);
			match(T__5);
			setState(107);
			expressao();
			setState(108);
			match(T__6);
			setState(109);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IoCmdContext extends ParserRuleContext {
		public TerminalNode LEIA() { return getToken(ForcaParser.LEIA, 0); }
		public TerminalNode ID() { return getToken(ForcaParser.ID, 0); }
		public TerminalNode ESCREVA() { return getToken(ForcaParser.ESCREVA, 0); }
		public ListaArgsContext listaArgs() {
			return getRuleContext(ListaArgsContext.class,0);
		}
		public IoCmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ioCmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterIoCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitIoCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitIoCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IoCmdContext ioCmd() throws RecognitionException {
		IoCmdContext _localctx = new IoCmdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ioCmd);
		int _la;
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEIA:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(LEIA);
				setState(112);
				match(T__5);
				setState(113);
				match(ID);
				setState(114);
				match(T__6);
				}
				break;
			case ESCREVA:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(ESCREVA);
				setState(116);
				match(T__5);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1030793297984L) != 0)) {
					{
					setState(117);
					listaArgs();
					}
				}

				setState(120);
				match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaArgsContext extends ParserRuleContext {
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public ListaArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterListaArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitListaArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitListaArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaArgsContext listaArgs() throws RecognitionException {
		ListaArgsContext _localctx = new ListaArgsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listaArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			expressao();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(124);
				match(T__7);
				setState(125);
				expressao();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ForcaParser.ID, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitAtribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitAtribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(ID);
			setState(132);
			match(T__1);
			setState(133);
			expressao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoContext extends ParserRuleContext {
		public ExprOuContext exprOu() {
			return getRuleContext(ExprOuContext.class,0);
		}
		public ExpressaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterExpressao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitExpressao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitExpressao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressaoContext expressao() throws RecognitionException {
		ExpressaoContext _localctx = new ExpressaoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expressao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			exprOu();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprOuContext extends ParserRuleContext {
		public List<ExprEContext> exprE() {
			return getRuleContexts(ExprEContext.class);
		}
		public ExprEContext exprE(int i) {
			return getRuleContext(ExprEContext.class,i);
		}
		public List<TerminalNode> OU() { return getTokens(ForcaParser.OU); }
		public TerminalNode OU(int i) {
			return getToken(ForcaParser.OU, i);
		}
		public ExprOuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprOu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).enterExprOu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ForcaListener ) ((ForcaListener)listener).exitExprOu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ForcaVisitor ) return ((ForcaVisitor<? extends T>)visitor).visitExprOu(this);
			else return visitor.visitChildren(this);
		}
	}
